--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 	
 			<div class="row justify-content-center mt-5">
 				<div class="col-md-6 text-center ftco-animate">
-					<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+					<p><a href="https://drive.google.com/file/d/1bz8im6FXFlFO3YmmrQTgupY2p9d1y2-Q/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
 				</div>
 			</div>
 		</div>
